--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gif-expert-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alfredolmacias.github.io/journalApp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -34,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.1"
   }
 }
